--- a/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/unit-test.buildspec.yml
@@ -7,7 +7,7 @@ phases:
 
       # Run the container and copy the results to /tmp
       # Passes all host environment variables through to the container
-      - docker run -it --name unit-test-container $(env | cut -f1 -d= | sed 's/^/-e /') amazon/unit-test-image
+      - docker run --name unit-test-container $(env | cut -f1 -d= | sed 's/^/-e /') amazon/unit-test-image
       - docker cp unit-test-container:/app/unit_tests/log /tmp/results.xml
       - docker rm -f unit-test-container
 
