copy requirements.txt separately in dockerfile

--- a/components/aws/sagemaker/tests/unit_tests/Dockerfile
+++ b/components/aws/sagemaker/tests/unit_tests/Dockerfile
@@ -6,10 +6,12 @@ RUN yum update -y \
  && yum install -y -q \
     python3
 
-copy ./sagemaker/ /app/
+# requirements.txt is copied separately to preserve cache
+COPY ./sagemaker/tests/unit_tests/requirements.txt .
+RUN pip3 install -r requirements.txt
+
+COPY ./sagemaker/ /app/
 
 WORKDIR /app/tests/unit_tests/
-
-RUN pip3 install -r requirements.txt
 
 ENTRYPOINT [ "bash", "./run_all_tests.sh" ]
