Add mkdir for Docker config

--- a/components/aws/sagemaker/codebuild/deploy.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/deploy.buildspec.yml
@@ -3,6 +3,7 @@ phases:
   pre_build:
     commands:
       # Log in to Dockerhub
+      - mkdir -p ~/.docker
       - echo $DOCKER_CONFIG > ~/.docker/config.json
 
   build:
