--- a/components/aws/sagemaker/workteam/component.yaml
+++ b/components/aws/sagemaker/workteam/component.yaml
@@ -36,7 +36,7 @@ outputs:
   - {name: workteam_arn, description: 'The ARN of the workteam.'}
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:0.3.0
+    image: redbackthomson/aws-kubeflow-sagemaker:20200501
     command: ['python']
     args: [
       workteam.py,
