Update image to newer image

--- a/components/aws/sagemaker/batch_transform/component.yaml
+++ b/components/aws/sagemaker/batch_transform/component.yaml
@@ -98,7 +98,7 @@ outputs:
   - {name: output_location,    description: 'S3 URI of the transform job results.'}
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:20200501
+    image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
     command: ['python']
     args: [
       batch_transform.py,
