--- a/components/aws/sagemaker/hyperparameter_tuning/component.yaml
+++ b/components/aws/sagemaker/hyperparameter_tuning/component.yaml
@@ -150,7 +150,7 @@ outputs:
     description: 'The registry path of the Docker image that contains the training algorithm'
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:20200501
+    image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
     command: ['python']
     args: [
       hyperparameter_tuning.py,
