--- a/components/aws/sagemaker/train/component.yaml
+++ b/components/aws/sagemaker/train/component.yaml
@@ -104,7 +104,7 @@ outputs:
   - {name: training_image,        description: 'The registry path of the Docker image that contains the training algorithm'}
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:20200501
+    image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
     command: ['python']
     args: [
       train.py,
