Update components to python3

--- a/components/aws/sagemaker/deploy/component.yaml
+++ b/components/aws/sagemaker/deploy/component.yaml
@@ -105,7 +105,7 @@ outputs:
 implementation:
   container:
     image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
-    command: ['python']
+    command: ['python3']
     args: [
       deploy.py,
       --region, {inputValue: region},
