--- a/components/aws/sagemaker/batch_transform/component.yaml
+++ b/components/aws/sagemaker/batch_transform/component.yaml
@@ -99,7 +99,7 @@ outputs:
 implementation:
   container:
     image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
-    command: ['python']
+    command: ['python3']
     args: [
       batch_transform.py,
       --region, {inputValue: region},
