--- a/components/aws/sagemaker/workteam/component.yaml
+++ b/components/aws/sagemaker/workteam/component.yaml
@@ -37,7 +37,7 @@ outputs:
 implementation:
   container:
     image: redbackthomson/aws-kubeflow-sagemaker:20200501-1
-    command: ['python']
+    command: ['python3']
     args: [
       workteam.py,
       --region, {inputValue: region},
