Update deploy to login

--- a/components/aws/sagemaker/codebuild/deploy.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/deploy.buildspec.yml
@@ -5,6 +5,7 @@ phases:
       # Log in to Dockerhub
       - mkdir -p ~/.docker
       - echo $DOCKER_CONFIG > ~/.docker/config.json
+      - docker login
 
   build:
     commands:
