--- a/components/aws/sagemaker/codebuild/deploy.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/deploy.buildspec.yml
@@ -3,9 +3,9 @@ phases:
   pre_build:
     commands:
       # Log in to Dockerhub
-      - mkdir -p ~/.docker
-      - echo $DOCKER_CONFIG > ~/.docker/config.json
-      - export DOCKER_CONFIG_PATH="~/.docker/config.json"
+      - export DOCKER_CONFIG_PATH="~/.docker"
+      - mkdir -p $DOCKER_CONFIG_PATH
+      - echo $DOCKER_CONFIG > "$DOCKER_CONFIG_PATH/config.json"
 
   build:
     commands:
