--- a/components/aws/sagemaker/codebuild/deploy.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/deploy.buildspec.yml
@@ -1,12 +1,10 @@
-version: 0.2      
+version: 0.2
+
 phases:
   pre_build:
     commands:
       # Log in to Dockerhub
-      - export DOCKER_CONFIG_PATH="~/.docker"
-      - mkdir -p $DOCKER_CONFIG_PATH
-      - echo $DOCKER_CONFIG > "$DOCKER_CONFIG_PATH/config.json"
-      - cat "$DOCKER_CONFIG_PATH/config.json"
+      - docker login -u $DOCKER_CONFIG_USERNAME -p $DOCKER_CONFIG_PASSWORD
 
   build:
     commands:
