--- a/components/aws/sagemaker/train/component.yaml
+++ b/components/aws/sagemaker/train/component.yaml
@@ -104,7 +104,7 @@ outputs:
   - {name: training_image,        description: 'The registry path of the Docker image that contains the training algorithm'}
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:20200501-2
+    image: amazon/aws-sagemaker-kfp-components:0.3.1
     command: ['python3']
     args: [
       train.py,
