AWS Sagemaker Components - enhance integration test coverage 	- Add tests for create endpoint, hpo job and batch transform 	- Minor bug fixes and documentation

--- a/components/aws/sagemaker/tests/integration_tests/resources/config/simple-mnist-training/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/simple-mnist-training/config.yaml
@@ -1,6 +1,7 @@
 PipelineDefinition: resources/definition/training_pipeline.py
 TestName: simple-mnist-training
 Timeout: 3600
+ExpectedTrainingImage: ((KMEANS_REGISTRY)).dkr.ecr.((REGION)).amazonaws.com/kmeans:1
 Arguments:
   region: ((REGION))
   image: ((KMEANS_REGISTRY)).dkr.ecr.((REGION)).amazonaws.com/kmeans:1
