--- a/components/google-cloud/storage/download_blob/component.yaml
+++ b/components/google-cloud/storage/download_blob/component.yaml
@@ -1,6 +1,7 @@
 name: Download from GCS
 inputs:
-- {name: GCS path, type: URI}
+- {name: GCS path, type: GCSPath}
+- {name: Recurse, type: Bool}
 outputs:
 - {name: Data}
 implementation:
@@ -11,10 +12,13 @@ implementation:
         - -ex
         - -c
         - |
+            [ "$2" == true ] && cp_flags=-r
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
             mkdir -p "$(dirname "$1")"
-            gsutil -m cp -r "$0" "$1"
+            gsutil -m cp $cp_flags "$0" "$1"
         - inputValue: GCS path
         - outputPath: Data
+        - inputValue: Recurse
+
