--- a/components/google-cloud/storage/upload_to_unique_uri/component.yaml
+++ b/components/google-cloud/storage/upload_to_unique_uri/component.yaml
@@ -4,7 +4,7 @@ inputs:
 - {name: Data}
 - {name: GCS path prefix, type: GCSPath}
 - {name: Parallel composite upload threshold, default: '150M'}
-- {name: Recurse, type: Bool}
+- {name: Recurse, type: Bool, default: false}
 outputs:
 - {name: GCS path, type: GCSPath}
 implementation:
