--- a/components/google-cloud/storage/download/component.yaml
+++ b/components/google-cloud/storage/download/component.yaml
@@ -1,7 +1,7 @@
 name: Download from GCS
 inputs:
 - {name: GCS path, type: GCSPath}
-- {name: Recurse, type: Bool, default: false}
+- {name: Recurse, type: Boolean, default: false}
 outputs:
 - {name: Data}
 implementation:
