--- a/components/google-cloud/storage/upload_to_explicit_uri/component.yaml
+++ b/components/google-cloud/storage/upload_to_explicit_uri/component.yaml
@@ -3,7 +3,7 @@ inputs:
 - {name: Data}
 - {name: GCS path, type: GCSPath}
 - {name: Parallel composite upload threshold, default: '150M'}
-- {name: Recurse, type: Bool, default: false}
+- {name: Recurse, type: Boolean, default: false}
 outputs:
 - {name: GCS path, type: GCSPath}
 implementation:
