--- a/components/google-cloud/storage/download_dir/component.yaml
+++ b/components/google-cloud/storage/download_dir/component.yaml
@@ -12,12 +12,12 @@ implementation:
         - -ex
         - -c
         - |
-            [ "$2" == true ] && rsync_flags=-r
+            [ "$2" == true ] && cp_flags=-r
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
             mkdir -p "$1"
-            gsutil -m cp $rsync_flags "$0" "$1"
+            gsutil -m cp $cp_flags "$0" "$1"
         - inputValue: GCS path
         - outputPath: Data
         - inputValue: Recurse
