--- a/components/google-cloud/storage/upload_to_unique_uri/component.yaml
+++ b/components/google-cloud/storage/upload_to_unique_uri/component.yaml
@@ -16,7 +16,7 @@ implementation:
         - -c
         - |
             [ -z "$3" ] || flags="-o GSUtil:parallel_composite_upload_threshold=$3"
-            [ "$4" == true ] && cp_flags=-r
+            [ "$4" = True ] && cp_flags=-r
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
