--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/pipeline.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/pipeline.yaml
@@ -573,8 +573,11 @@ spec:
           readinessProbe:
             exec:
               command:
-                - curl
-                - -f
+                - wget
+                - -q # quiet
+                - -S # show server response
+                - -O
+                - "-" # Redirect output to stdout
                 - http://localhost:3000/apis/v1beta1/healthz
             initialDelaySeconds: 3
             periodSeconds: 5
@@ -582,8 +585,11 @@ spec:
           livenessProbe:
             exec:
               command:
-                - curl
-                - -f
+                - wget
+                - -q # quiet
+                - -S # show server response
+                - -O
+                - "-" # Redirect output to stdout
                 - http://localhost:3000/apis/v1beta1/healthz
             initialDelaySeconds: 3
             periodSeconds: 5
