--- a/manifests/kustomize/base/metadata/metadata-grpc-deployment.yaml
+++ b/manifests/kustomize/base/metadata/metadata-grpc-deployment.yaml
@@ -52,5 +52,17 @@ spec:
                "--mysql_config_password=$(DBCONFIG_PASSWORD)"
                ]
         ports:
-        - name: md-backendapi
+        - name: grpc-md-backendapi
           containerPort: 8080
+        livenessProbe:
+          tcpSocket:
+            port: grpc-md-backendapi
+          initialDelaySeconds: 3
+          periodSeconds: 5
+          timeoutSeconds: 2
+        readinessProbe:
+          tcpSocket:
+            port: grpc-md-backendapi
+          initialDelaySeconds: 3
+          periodSeconds: 5
+          timeoutSeconds: 2
