--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/metadata.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/metadata.yaml
@@ -7,7 +7,7 @@ metadata:
   name: metadata-grpc-service
 spec:
   ports:
-    - name: grpc-md-backendapi
+    - name: grpc-api
       port: 8080
       protocol: TCP
   selector:
@@ -81,16 +81,16 @@ spec:
                 ]
         ports:
         - containerPort: 8080
-          name: grpc-md-backendapi
+          name: grpc-api
         livenessProbe:
           tcpSocket:
-            port: grpc-md-backendapi
+            port: grpc-api
           initialDelaySeconds: 3
           periodSeconds: 5
           timeoutSeconds: 2
         readinessProbe:
           tcpSocket:
-            port: grpc-md-backendapi
+            port: grpc-api
           initialDelaySeconds: 3
           periodSeconds: 5
           timeoutSeconds: 2
