--- a/manifests/kustomize/base/metadata/metadata-grpc-deployment.yaml
+++ b/manifests/kustomize/base/metadata/metadata-grpc-deployment.yaml
@@ -52,17 +52,17 @@ spec:
                "--mysql_config_password=$(DBCONFIG_PASSWORD)"
                ]
         ports:
-        - name: grpc-md-backendapi
+        - name: grpc-api
           containerPort: 8080
         livenessProbe:
           tcpSocket:
-            port: grpc-md-backendapi
+            port: grpc-api
           initialDelaySeconds: 3
           periodSeconds: 5
           timeoutSeconds: 2
         readinessProbe:
           tcpSocket:
-            port: grpc-md-backendapi
+            port: grpc-api
           initialDelaySeconds: 3
           periodSeconds: 5
           timeoutSeconds: 2
