--- a/components/aws/sagemaker/codebuild/integration-test.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/integration-test.buildspec.yml
@@ -10,12 +10,11 @@ phases:
       - cd components/aws
       - docker build . -f ./sagemaker/tests/integration_tests/Dockerfile -t amazon/integration-test-image
 
-      # Construct the list of environment variable by splitting the string
-      - IFS=' ' read -a variable_array <<< $CONTAINER_VARIABLES
+      - cd sagemaker/codebuild/scripts && ./construct_environment_array.sh
 
       # Run the container and copy the results to /tmp
       # Passes all listed host environment variables through to the container
-      - docker run --name integration-test-container $(printf -- "-e %s " "${variable_array[@]}") amazon/integration-test-image
+      - docker run --name integration-test-container $(echo "$CONTAINER_VARIABLE_ARGUMENTS") amazon/integration-test-image
       - docker cp integration-test-container:/tests/integration_tests/integration_tests.log /tmp/results.xml
       - docker rm -f integration-test-container
 
