--- a/.release.cloudbuild.yaml
+++ b/.release.cloudbuild.yaml
@@ -24,6 +24,38 @@ steps:
       # Parse major minor version and save to a file for reusing in other steps.
       echo $TAG_NAME | sed -e "s#[^0-9]*\([0-9]*\)[.]\([0-9]*\)[.]\([0-9]*\)#\1.\2#" > /workspace/mm.ver
 
+# Pull and retag images for pipeline components
+- id: 'retagComponentImages'
+  name: 'gcr.io/cloud-builders/docker'
+  entrypoint: bash
+  waitFor: ['-']
+  args:
+  - -ceux
+  - |
+    images=(
+      "ml-pipeline-kubeflow-deployer"
+      "ml-pipeline-kubeflow-tf-trainer"
+      "ml-pipeline-kubeflow-tf-trainer-gpu"
+      "ml-pipeline-kubeflow-tfjob"
+      "ml-pipeline-dataproc-analyze"
+      "ml-pipeline-dataproc-create-cluster"
+      "ml-pipeline-dataproc-delete-cluster"
+      "ml-pipeline-dataproc-predict"
+      "ml-pipeline-dataproc-transform"
+      "ml-pipeline-dataproc-train"
+      "ml-pipeline-local-confusion-matrix"
+      "ml-pipeline-local-roc"
+      "ml-pipeline-gcp"
+    )
+    for image in "${images[@]}"
+    do
+      FROM_IMAGE="gcr.io/$PROJECT_ID/$image"
+      TARGET_IMAGE="gcr.io/ml-pipeline/$image:$TAG_NAME"
+      docker pull $FROM_IMAGE
+      docker tag $FROM_IMAGE $TARGET_IMAGE
+      docker push $TARGET_IMAGE
+    done
+
 # Pull and retag the images for the pipeline system
 - name: 'gcr.io/cloud-builders/docker'
   args: ['pull', 'gcr.io/$PROJECT_ID/frontend:$COMMIT_SHA']
