--- a/manifests/kustomize/base/kustomization.yaml
+++ b/manifests/kustomize/base/kustomization.yaml
@@ -13,6 +13,28 @@ bases:
 resources:
   - pipeline-application.yaml
 
+images:
+  - name: gcr.io/ml-pipeline/api-server
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/persistenceagent
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/scheduledworkflow
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/frontend
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/viewer-crd-controller
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/inverse-proxy-agent
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/visualization-server
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/metadata-writer
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/cache-server
+    newTag: 0.5.1
+  - name: gcr.io/ml-pipeline/cache-deployer
+    newTag: 0.5.1
+
 # Used by Kustomize
 configMapGenerator:
   - name: pipeline-install-config
