--- a/components/aws/sagemaker/codebuild/integration-test.buildspec.yml
+++ b/components/aws/sagemaker/codebuild/integration-test.buildspec.yml
@@ -15,6 +15,9 @@ phases:
       # Run the container and copy the results to /tmp
       # Passes all listed host environment variables through to the container
       - docker run --name integration-test-container $(echo $CONTAINER_VARIABLE_ARGUMENTS) amazon/integration-test-image
+
+  post_build:
+    commands:
       - docker cp integration-test-container:/tests/integration_tests/integration_tests.log /tmp/results.xml
       - docker rm -f integration-test-container
 
