Changed few more places
This should be all the palaces that need to be changed to fix https://github.com/kubeflow/pipelines/issues/3798

--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/cache.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/cache.yaml
@@ -205,7 +205,7 @@ spec:
       - name: server
         image: {{ .Values.images.cacheserver }}
         env:
-          {{ if .Values.managedstorage.enabled }}
+          {{ if .Values.managedstorage.cloudsqlInstanceConnectionName }}
           - name: DBCONFIG_USER
             valueFrom:
               secretKeyRef:
